--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -34,7 +34,7 @@
             <a href="#" class="nav__link">Войти</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Регистрация</a>
+            <a href="registration.html" class="nav__link">Регистрация</a>
           </li>
           <li class="nav__item">
             <a href="#" class="nav__link">О нас</a>
