--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230220125216">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230221131817">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +40,7 @@
 								<a href="#" class="nav__link">Войти</a>
 							</li>
 							<li class="nav__item">
-								<a href="#" class="nav__link">Регистрация</a>
+								<a href="registration.html" class="nav__link">Регистрация</a>
 							</li>
 							<li class="nav__item">
 								<a href="#" class="nav__link">О нас</a>
@@ -143,7 +143,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230220125216"></script>
+	<script src="js/app.min.js?_v=20230221131817"></script>
 </body>
 
 </html>
