--- a/src/about.html
+++ b/src/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('html/_head.htm',{
-"title":"Регистрация"
+"title":"О нас"
 })
 
 <body>
 	<div class="wrapper">
 		@@include('html/_header.htm',{})
 		<main>
-			@@include('html/section/_registratiion.html',{})
+			@@include('html/section/_about.html',{})
 		</main>
 
 		
