--- a/src/enter.html
+++ b/src/enter.html
@@ -8,7 +8,7 @@
 	<div class="wrapper">
 		@@include('html/_header.htm',{})
 		<main>
-			@@include('html/section/_registratiion.html',{})
+			@@include('html/section/_enter.html',{})
 		</main>
 
 		
