--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -31,13 +31,13 @@
       <nav class="header__nav nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="#" class="nav__link">Войти</a>
+            <a href="enter.html" class="nav__link">Войти</a>
           </li>
           <li class="nav__item">
             <a href="registration.html" class="nav__link">Регистрация</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">О нас</a>
+            <a href="about.html" class="nav__link">О нас</a>
           </li>
           <li class="nav__item">
             <a href="#" class="nav__link">Отзывы</a>
