--- a/src/html/section/_main.html
+++ b/src/html/section/_main.html
@@ -13,7 +13,7 @@
           аудитории откуда угодно, вплоть до аудитории с каналов, чатов и далее
           на свой канал, группу и бота🤩💫😉
         </p>
-        <a href="#" class="main__link link link--small" role="button"
+        <a href="canal.html" class="main__link link link--small" role="button"
           >Подробнее</a
         >
       </div>
