--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -24,7 +24,9 @@
           <img
             src="@img/icons/Telegram.svg"
             alt="telegram"
-            class="header__img" width="59px" height="59px"
+            class="header__img"
+            width="59px"
+            height="59px"
           />
         </a>
       </div>
@@ -39,11 +41,21 @@
           <li class="nav__item">
             <a href="about.html" class="nav__link">О нас</a>
           </li>
-          <li class="nav__item">
+          <li class="nav__item nav__item--tooltip">
             <a href="#" class="nav__link">Отзывы</a>
+            <div class="nav__tooltip-box">
+              <p class="nav__tooltiptext">Посмотреть отзывы: <a href="#">(ссылка)</a></p>
+              <p class="nav__tooltiptext">Написать отзыв: <a href="#">(ссылка)</a></p>
+            </div>
           </li>
-          <li class="nav__item">
+          <li class="nav__item nav__item--tooltip">
             <a href="#" class="nav__link">Техподдержка</a>
+            <div class="nav__tooltip-box">
+              <p class="nav__tooltiptext">
+                Если у Вас возникли проблемы пишите в ТГ по адресу:  <a href="https://t.me/LikeHumen"> @LikeHume</a>
+                или <a href="https://t.me/volkdem">@volkdem</a>. Также можете обратиться к боту <a href="#">(ссылка)</a>
+              </p>
+            </div>
           </li>
           <li class="nav__item">
             <a href="#" class="nav__link">Настройки</a>
