--- a/src/html/section/_about.html
+++ b/src/html/section/_about.html
@@ -1,5 +1,25 @@
 <section class="about">
-	<div class="about__wrapper contaainer">
-		<h1 class="about__title title">О нас</h1>
-	</div>
+  <div class="about__wrapper container">
+    <h1 class="about__title title">О нас</h1>
+    <div class="about__box-conent">
+      <p class="about__text text text--big">
+        Мы начинающая команда специалистов, базирующихся на разработке программ
+        по раскрутке любого бизнеса, канала, бота и далее. В нашей команде
+        присутствуют опытные разработчики Python, ботов, также дизайнеры и
+        специалисты по рекламе, привлечении трафика. И уверяем Вас, что вы не
+        пожалеете! С каждым разом мы стараемся лучше воплотить в явь задуманное
+        и делаем всё возможное, чтобы поток клиентов, подписчиков был огромным
+        😉
+      </p>
+      <p class="about__text text text--big">
+        Если имеются какие-то вопросы, либо пожелания, то просьба обращаться к
+        Администратору проекта:
+      </p>
+      <p class="about__text text text--big">
+        🧑‍💻Александр, Ватсапп:
+        <a href="https://wa.me/89283397886">8-928-339-78-86</a><br />
+        Телеграм: <a href="https://t.me/volkdem"> t.me/volkdem</a>
+      </p>
+    </div>
+  </div>
 </section>
